# MLIR-relay

TE/: CMakeLists.txt  README.md  main.cpp
TE/include/toy/: CMakeLists.txt  Dialect.h  Ops.td  Passes.h  ShapeInferenceInterface.h
TE/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
